# provers

./: .dockerignore  .gitignore  .rules  AGENTS.md  Cargo.toml  Dockerfile  Makefile.ci.toml  Makefile.contracts.toml  Makefile.elf.toml  Makefile.test.toml  Makefile.toml  README.md  buf.aggkit-prover.gen.yaml  buf.agglayer-prover.gen.yaml  buf.op-succinct-grpc.gen.yaml  buf.proposer.gen.yaml  buf.yaml  cliff.toml  package-lock.json  sonar-project.properties
crates/aggchain-proof-builder/: Cargo.toml  build.rs  sindri.json
crates/aggchain-proof-builder/elf/: riscv32im-succinct-zkvm-elf  riscv64im-succinct-zkvm-elf
crates/aggchain-proof-builder/src/: aggchain_prover.rs  config.rs  error.rs  lib.rs
crates/aggchain-proof-builder/src/provider/: json_rpc.rs  mod.rs
crates/aggchain-proof-builder/src/tests/: mod.rs  optimistic_mode.rs
crates/aggchain-proof-contracts/: Cargo.toml
crates/aggchain-proof-contracts/contracts/: AggchainFEP.json  GlobalExitRootManagerL2SovereignChain.json  PolygonRollupManager.json  PolygonZkEVMBridgeV2.json  aggchain-fep.json  global-exit-root-manager-l2-sovereign-chain.json  polygon-zkevm-bridge-v2.json
crates/aggchain-proof-contracts/src/: config.rs  contracts.rs  error.rs  lib.rs
crates/aggchain-proof-contracts/src/tests/: get_l2_output_at_block.json  mod.rs  parsing_l2_output_root.json
crates/aggchain-proof-core/: Cargo.toml  build.rs
crates/aggchain-proof-core/src/: bridge.rs  bridge_proof.rs  digest.rs  error.rs  full_execution_proof.rs  inserted_ger.rs  keccak.rs  lib.rs  proof.rs  version.rs  vkey_hash.rs
crates/aggchain-proof-core/src/bridge/: inserted_ger.rs  mod.rs  static_call.rs
crates/aggchain-proof-core/src/keccak/: digest.rs
crates/aggchain-proof-core/src/local_exit_tree/: hasher.rs  mod.rs  proof.rs
crates/aggchain-proof-core/src/test_input/: bridge_constraints_input.json  bridge_input_e2e_sepolia.json  bridge_test.json  genesis.json
crates/aggchain-proof-core/test/: README.md
crates/aggchain-proof-core/test/bridge-constraints-sp1-program/: Cargo.toml
crates/aggchain-proof-core/test/bridge-constraints-sp1-script/: Cargo.toml  build.rs
crates/aggchain-proof-multisig-program/: Cargo.toml
crates/aggchain-proof-multisig-program/elf/: aggchain-proof-multisig-program
crates/aggchain-proof-multisig-program/src/: main.rs
crates/aggchain-proof-program/: Cargo.toml  sindri.json
crates/aggchain-proof-program/elf/: riscv32im-succinct-zkvm-elf
crates/aggchain-proof-program/src/: main.rs
crates/aggchain-proof-service/: Cargo.toml  build.rs
crates/aggchain-proof-service/src/: config.rs  error.rs  lib.rs  service.rs  validation.rs
crates/aggchain-proof-service/src/context/: aggchain_proof_program_version.rs  mod.rs
crates/aggchain-proof-service/src/custom_chain_data/: mod.rs  tests.rs
crates/aggchain-proof-service/src/service/: customchaindata_builder.rs
crates/aggchain-proof-service/test-vectors/: aggchain-selector.json
crates/aggchain-proof-test-suite/: Cargo.toml
crates/aggchain-proof-types/: Cargo.toml
crates/aggchain-proof-types/src/: error.rs  imported_bridge_exit.rs  inserted_ger.rs  lib.rs  proof.rs  removed_ger.rs  unclaim.rs
crates/aggkit-prover/: CHANGELOG.md  Cargo.toml
crates/aggkit-prover-config/: Cargo.toml
crates/aggkit-prover-config/src/: aggchain_proof.rs  aggchain_proof_builder.rs  aggchain_proof_service.rs  lib.rs  proposer_service.rs  shutdown.rs  telemetry.rs
crates/aggkit-prover-config/tests/: validate_deserialize.rs
crates/aggkit-prover-config/tests/snapshots/: validate_deserialize__empty_rpcs.snap  validate_deserialize__grpc_max_decoding_message_size.snap  validate_deserialize__prover_grpc_max_decoding_message_size.snap
crates/aggkit-prover-types/: Cargo.toml  build.rs
crates/aggkit-prover-types/src/: conversion.rs  error.rs  lib.rs  vkey.rs  vkey_hash.rs
crates/aggkit-prover-types/src/compat/: mod.rs
crates/aggkit-prover-types/src/conversion/: imported_bridge_exit.rs  inserted_ger.rs  mod.rs
crates/aggkit-prover/src/: lib.rs  main.rs  rpc.rs
crates/aggkit-prover/src/aggchain_proof/: error.rs  mod.rs  rpc.rs  service.rs
crates/aggkit-prover/src/cli/: mod.rs
crates/aggkit-prover/src/tests/: mod.rs
crates/aggkit-prover/src/utils/: context.rs
crates/agglayer-prover/: Cargo.toml
crates/agglayer-prover-types/: Cargo.toml  build.rs
crates/agglayer-prover-types/proto/v1/: proof_generation.proto
crates/agglayer-prover-types/src/: error.rs  lib.rs
crates/agglayer-prover/src/: executor.rs  fake.rs  lib.rs  logging.rs  main.rs  prover.rs  rpc.rs
crates/agglayer-prover/src/executor/: tests.rs
crates/proposer-client/: Cargo.toml  README.md  build.rs  proofs.proto
crates/proposer-client/src/: agg_span_prover.rs  aggregation_prover.rs  client.rs  config.rs  database_prover.rs  error.rs  lib.rs  mock_grpc_prover.rs  mock_prover.rs  network_prover.rs  rpc.rs
crates/proposer-client/src/rpc/: mod.rs  (+1 more)
crates/proposer-db-client/: Cargo.toml
crates/proposer-db-client/src/: client.rs  config.rs  error.rs  lib.rs  types.rs
crates/proposer-elfs/: Cargo.toml  build.rs
crates/proposer-elfs/src/: lib.rs
crates/proposer-service/: Cargo.toml
crates/proposer-service/src/: config.rs  error.rs  l2_rpc.rs  lib.rs  vkey_hash.rs
crates/proposer-vkeys-raw/: Cargo.toml  build.rs
crates/proposer-vkeys-raw/src/: generated.rs  lib.rs
crates/prover-alloy/: Cargo.toml
crates/prover-alloy/src/: lib.rs
crates/prover-config/: CHANGELOG.md  Cargo.toml
crates/prover-config/src/: lib.rs
crates/prover-config/tests/: validate_deserialize.rs
crates/prover-elf-utils/: Cargo.toml
crates/prover-elf-utils/src/: elf_info.rs  lib.rs
crates/prover-engine/: CHANGELOG.md  Cargo.toml
crates/prover-engine/src/: lib.rs
crates/prover-executor/: CHANGELOG.md  Cargo.toml
crates/prover-executor/src/: error.rs  lib.rs  tests.rs  utils.rs
crates/prover-logger/: Cargo.toml
crates/prover-logger/src/: lib.rs  log.rs
crates/prover-tracer/: Cargo.toml
crates/prover-tracer/src/: lib.rs
crates/prover-utils/: Cargo.toml
crates/prover-utils/src/: lib.rs
(+71 files in other folders)
