[workspace]
resolver = "2"
default-members = ["crates/agglayer-prover", "crates/aggkit-prover"]
members = ["crates/*"]
exclude = ["crates/prover-dummy-program", "crates/aggchain-proof-program"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("cargo-clippy"))',
] }

[workspace.dependencies]
# Project dependencies
aggchain-customchaindata-builder = { path = "crates/aggchain-customchaindata-builder" }
aggchain-proof-builder = { path = "crates/aggchain-proof-builder" }
aggchain-proof-contracts = { path = "crates/aggchain-proof-contracts" }
aggchain-proof-core = { path = "crates/aggchain-proof-core" }
aggchain-proof-service = { path = "crates/aggchain-proof-service" }
aggchain-proof-types = { path = "crates/aggchain-proof-types" }
aggkit-prover = { path = "crates/aggkit-prover" }
aggkit-prover-config = { path = "crates/aggkit-prover-config" }
aggkit-prover-types = { path = "crates/aggkit-prover-types" }
agglayer-prover = { path = "crates/agglayer-prover" }
agglayer-prover-config = { path = "crates/agglayer-prover-config" }
agglayer-prover-types = { path = "crates/agglayer-prover-types" }
proposer-client = { path = "crates/proposer-client" }
proposer-elfs = { path = "crates/proposer-elfs" }
proposer-service = { path = "crates/proposer-service" }
prover-alloy = { path = "crates/prover-alloy" }
prover-config = { path = "crates/prover-config" }
prover-elf-utils = { path = "crates/prover-elf-utils" }
prover-engine = { path = "crates/prover-engine" }
prover-executor = { path = "crates/prover-executor" }
prover-logger = { path = "crates/prover-logger" }
prover-utils = { path = "crates/prover-utils" }

# TODO: this should probably move to interop
agglayer-telemetry = { git = "https://github.com/agglayer/agglayer.git", branch = "release/0.2.1" }

# Interop dependencies
agglayer-elf-build = "0.11.0"
agglayer-evm-client = "0.11.0"
agglayer-interop = "0.11.0"
agglayer-interop-types = "0.11.0"
agglayer-primitives = "0.11.0"
agglayer-tries = "0.11.0"
unified-bridge = "0.11.0"

# Ecosystem dependencies
op-succinct-elfs = { git = "https://github.com/agglayer/op-succinct.git", tag = "v3.3.0-agglayer-beta.1" }

# SP1 dependencies
# Please check if the toolchain image at the top `scripts/make/Makefile.elf.toml` could also be
# updated whenever updating the below dependencies; as well as updating the proof-program binary
# crate dependencies.
p3-baby-bear = "=0.2.3-succinct"
p3-bn254-fr = "=0.2.3-succinct"
p3-field = "=0.2.3-succinct"
sp1-core-executor = "=5.0.0"
sp1-core-machine = "=5.0.0"
sp1-sdk = "=5.0.3"
sp1-prover = "=5.0.1"
sp1-zkvm = "=5.0.0"

sp1-cc-host-executor = { git = "https://github.com/succinctlabs/sp1-contract-call/", rev = "9173159e6671c602610fe5df44c695de906e4ee3", features = [
    "optimism",
] }
sp1-cc-client-executor = { git = "https://github.com/succinctlabs/sp1-contract-call/", rev = "9173159e6671c602610fe5df44c695de906e4ee3", features = [
    "optimism",
] }

# Core dependencies
alloy = { version = '0.14.0', features = ["full"] }
alloy-rlp = "0.3.10"
alloy-sol-macro = "1.1"
alloy-sol-types = "1.1"
alloy-primitives = { version = "1.2", features = ["serde", "k256"] }
anyhow = "1.0"
arc-swap = "1.7"
async-trait = "0.1.82"
base64 = "0.22.0"
buildstructor = "0.5.4"
bytes = "1.10"
clap = { version = "4.5", features = ["derive", "env"] }
color-eyre = "0.6.5"
derive_more = "2.0"
dirs = "5.0"
dotenvy = "0.15.7"
educe = "0.6"
ethers = "2.0"
ethers-gcp-kms-signer = "0.1.5"
ethers-signers = "2.0"
eyre = "0.6.12"
fail = { version = "0.5.1", default-features = false }
ff = { version = "0.13", features = ["derive"] }
futures = "0.3.31"
hex = "0.4.3"
http-body-util = "0.1.2"
hyper = "1.5"
# Temporary until https://github.com/mitsuhiko/insta/pull/672 or similar lands
insta = { git = "https://github.com/freyskeyd/insta", branch = "chore/updating-deps-to-avoid-serialize-error", features = [
    "toml",
    "yaml",
] }
jsonrpsee = { version = "0.24.7", features = ["full"] }
k256 = "0.13.4"
lazy_static = "1.5"
mockall = "0.13.1"
mockito = "1.6"
parking_lot = "0.12.3"
pbjson = "0.7.0"
prost = "0.13.5"
rand = "0.8.5"
rstest = "0.22.0"
reqwest = "0.12"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.14"
sha2 = "0.10.8"
test-log = "0.2.16"
thiserror = "2.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
tokio = { version = "1.42", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.13"
toml = "0.8.15"
tonic = { version = "0.13.1", default-features = false }
tonic-health = "0.13.1"
tonic-reflection = "0.13.1"
tonic-types = "0.13.1"
tower = "0.4.13"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
