[package]
name = "aggchain-proof-builder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
alloy.workspace = true
alloy-primitives.workspace = true
bincode.workspace = true

futures.workspace = true
thiserror.workspace = true
tower = { workspace = true, features = ["timeout"] }
serde = { workspace = true, features = ["derive"] }
sp1-core-executor.workspace = true
sp1-prover.workspace = true
sp1-sdk.workspace = true

# tmp sp1 deps
sp1-recursion-core = "=4.1.4"
p3-baby-bear = { version = "=0.2.1-succinct", features = ["nightly-features"] }

aggchain-proof-contracts.workspace = true
aggchain-proof-core.workspace = true
aggchain-proof-types.workspace = true
agglayer-interop.workspace = true
agglayer-primitives.workspace = true
prover-config.workspace = true
prover-executor.workspace = true

[lints]
workspace = true
