[package]
name = "aggchain-proof-builder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy.workspace = true
alloy-primitives.workspace = true

eyre.workspace = true
futures.workspace = true
thiserror.workspace = true
tower = { workspace = true, features = ["timeout"] }
serde = { workspace = true, features = ["derive"] }
sp1-core-executor.workspace = true
sp1-prover.workspace = true
sp1-sdk.workspace = true
tracing.workspace = true

aggchain-proof-contracts.workspace = true
aggchain-proof-core.workspace = true
aggchain-proof-types.workspace = true
agglayer-elf-build.workspace = true
agglayer-interop.workspace = true
agglayer-primitives.workspace = true
aggkit-prover-types = { workspace = true, features = ["sp1"] }
prover-config.workspace = true
prover-executor.workspace = true
prover-utils.workspace = true
proposer-elfs.workspace = true
serde_json.workspace = true
unified-bridge.workspace = true

[dev-dependencies]
tokio.workspace = true

[build-dependencies]
color-eyre.workspace = true
eyre.workspace = true

agglayer-elf-build.workspace = true

[lints]
workspace = true
