[package]
name = "aggchain-proof-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
async-trait.workspace = true
jsonrpsee.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

agglayer-primitives.workspace = true
agglayer-interop.workspace = true
aggchain-proof-types.workspace = true
prover-alloy.workspace = true
prover-utils.workspace = true
mockall = { workspace = true, optional = true }

[dev-dependencies]
mockito.workspace = true
test-log.workspace = true

[lints]
workspace = true

[features]
default = []
testutils = ["mockall"]
