[package]
name = "aggchain-proof-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
testutils = ["mockall"]

[dependencies]
agglayer-primitives.workspace = true
agglayer-interop.workspace = true
aggchain-proof-types.workspace = true
aggchain-proof-core.workspace = true
prover-alloy.workspace = true
prover-utils.workspace = true

alloy.workspace = true
anyhow.workspace = true
async-trait.workspace = true
eyre.workspace = true
jsonrpsee.workspace = true
mockall = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sp1-cc-client-executor.workspace = true
sp1-cc-host-executor.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
alloy = { workspace = true, features = ["sol-types"] }
mockito.workspace = true
test-log.workspace = true
