[package]
name = "aggchain-proof-core"
version = "0.1.0"
edition = "2021"

[dependencies]
agglayer-primitives.workspace = true
agglayer-tries.workspace = true
unified-bridge.workspace = true
proposer-vkeys-raw.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-sol-macro = "0.8.21"
alloy-sol-types = "0.8.21"
alloy-rlp = "0.3.10"

# sp1
sp1-zkvm = { version = "=4.1.4", features = ["verify"] }
sp1-cc-client-executor.workspace = true

eyre.workspace = true
hex.workspace = true
k256 = "0.13.4"
serde.workspace = true
serde_with.workspace = true
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes.git", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
thiserror.workspace = true
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0", features = [
    "keccak",
] }

[dev-dependencies]
alloy.workspace = true
dotenvy.workspace = true
mockall.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true

# sp1
sp1-cc-host-executor.workspace = true
sp1-sdk.workspace = true

[build-dependencies]
semver.workspace = true
toml.workspace = true
