[package]
name = "aggchain-proof-core"
version = "0.1.0"
edition = "2021"

[build-dependencies]
color-eyre.workspace = true
semver.workspace = true
toml.workspace = true

[dependencies]
agglayer-primitives.workspace = true
agglayer-tries.workspace = true
unified-bridge.workspace = true

alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-sol-macro.workspace = true
alloy-sol-types.workspace = true
eyre.workspace = true
hex.workspace = true
k256.workspace = true
serde.workspace = true
serde_with.workspace = true
sha2.workspace = true
p3-baby-bear = { workspace = true, features = ["nightly-features"] }
p3-bn254-fr.workspace = true
p3-field.workspace = true
sp1-cc-client-executor.workspace = true
sp1-zkvm = { workspace = true, features = ["verify"] }
thiserror.workspace = true
tiny-keccak.workspace = true

[dev-dependencies]
alloy = { workspace = true, features = ["sol-types", "genesis"] }
dotenvy.workspace = true
mockall.workspace = true
serde_json.workspace = true
sp1-cc-host-executor.workspace = true
sp1-sdk.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
