[package]
version = "0.1.0"
name = "aggchain-proof-program"
edition = "2021"

[dependencies]
bincode = "1.3.3"
sp1-zkvm = "4.1.0"
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0", features = [
    "keccak",
] }

aggchain-proof-core = { path = "../aggchain-proof-core", default-features = false }
