[package]
name = "aggchain-proof-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
sp1-sdk = { workspace = true }
thiserror.workspace = true
tokio.workspace = true
tower = { workspace = true, features = ["timeout"] }
tracing.workspace = true

aggchain-proof-builder.workspace = true
aggchain-proof-core.workspace = true
aggkit-prover-types.workspace = true
proposer-service.workspace = true
prover-alloy.workspace = true

educe = { workspace = true, features = ["Clone"], default-features = false }

[dev-dependencies]
mockall.workspace = true
serde_json.workspace = true

[build-dependencies]
semver.workspace = true
toml.workspace = true
