[package]
name = "aggchain-proof-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
agglayer-interop.workspace = true
aggchain-proof-builder.workspace = true
aggchain-proof-contracts.workspace = true
aggchain-proof-core.workspace = true
aggchain-proof-types.workspace = true
proposer-client.workspace = true
proposer-service.workspace = true
prover-alloy.workspace = true
unified-bridge.workspace = true

alloy-primitives.workspace = true
alloy-sol-types.workspace = true
anyhow.workspace = true
futures.workspace = true
serde.workspace = true
sp1-sdk = { workspace = true }
thiserror.workspace = true
tokio.workspace = true
tower = { workspace = true, features = ["timeout"] }
tracing.workspace = true

[dev-dependencies]
aggchain-proof-contracts = { workspace = true, features = ["testutils"] }

serde_json.workspace = true
