[package]
name = "aggkit-prover-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
sp1 = ["dep:sp1-sdk"]

[dependencies]
alloy-primitives.workspace = true
bincode.workspace = true
hex.workspace = true
prost = "0.13.4"
serde.workspace = true
thiserror.workspace = true
tonic = { workspace = true, default-features = false, features = [
    "prost",
    "codegen",
    "transport",
] }

sp1-sdk = { workspace = true, optional = true }

aggchain-proof-types.workspace = true

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = [
    "prost",
    "transport",
] }
