[package]
name = "aggkit-prover-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
sp1 = ["dep:sp1-sdk", "dep:prover-elf-utils"]

[dependencies]
alloy-primitives.workspace = true
eyre.workspace = true
prost.workspace = true
serde.workspace = true
thiserror.workspace = true
tonic = { workspace = true, default-features = false, features = [
    "prost",
    "codegen",
    "transport",
] }

sp1-sdk = { workspace = true, optional = true }

aggchain-proof-types.workspace = true
agglayer-interop = { workspace = true, features = ["grpc-compat"] }
pbjson.workspace = true
prover-elf-utils = { workspace = true, optional = true }

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = [
    "prost",
    "transport",
] }
