[package]
name = "aggkit-prover"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
http = "1.3.1"
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tonic = { workspace = true, features = ["zstd"] }
tonic-types = { workspace = true }
tower = { workspace = true, features = ["timeout"] }
tracing.workspace = true

aggchain-proof-service.workspace = true
aggkit-prover-config.workspace = true
aggkit-prover-types.workspace = true
prover-engine.workspace = true
prover-logger.workspace = true

[dev-dependencies]
hyper-util = "0.1.10"
tokio-stream = { workspace = true, features = ["sync"] }

[features]
default = []
testutils = []
