[package]
name = "aggkit-prover"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env", "string"] }
dotenvy.workspace = true
futures.workspace = true
hex.workspace = true
http = "1.2.0"
jsonrpsee.workspace = true
prost.workspace = true
sp1-sdk.workspace = true
sp1-zkvm.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
toml.workspace = true
tonic = { workspace = true, features = ["zstd"] }
tonic-types = { workspace = true }
tower = { workspace = true, features = ["timeout"] }
tracing.workspace = true

aggchain-proof-service.workspace = true
aggchain-proof-types.workspace = true
aggkit-prover-config.workspace = true
aggkit-prover-types.workspace = true
agglayer-interop = { workspace = true, features = ["grpc-compat"] }
proposer-client.workspace = true
proposer-service.workspace = true
prover-config.workspace = true
prover-engine.workspace = true
prover-executor.workspace = true
prover-logger.workspace = true

[dev-dependencies]
hyper-util = "0.1.10"
mockall.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }

[build-dependencies]
vergen-git2 = { version = "1.0.0", features = ["build"] }

[features]
default = []
testutils = []
