[package]
name = "aggkit-prover"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
testutils = []

[build-dependencies]
vergen-git2 = { workspace = true, features = ["build"] }

[dependencies]
aggchain-proof-service = { workspace = true, features = ["testutils"] }
aggchain-proof-types.workspace = true
aggkit-prover-config.workspace = true
aggkit-prover-types.workspace = true
agglayer-interop = { workspace = true, features = ["grpc-compat"] }
proposer-client = { workspace = true, features = ["testutils"] }
proposer-service.workspace = true
prover-config.workspace = true
prover-engine.workspace = true
prover-executor.workspace = true
prover-logger.workspace = true

anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env", "string"] }
dotenvy.workspace = true
futures.workspace = true
hex.workspace = true
http.workspace = true
jsonrpsee.workspace = true
prost.workspace = true
sp1-sdk.workspace = true
sp1-zkvm.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
toml.workspace = true
tonic = { workspace = true, features = ["zstd"] }
tonic-types = { workspace = true }
tower = { workspace = true, features = ["timeout"] }
tracing.workspace = true

[dev-dependencies]
aggchain-proof-contracts = { workspace = true, features = ["testutils"] }
aggchain-proof-core.workspace = true
agglayer-evm-client = { workspace = true, features = ["testutils"] }
agglayer-primitives.workspace = true

alloy.workspace = true
hyper-util.workspace = true
mockall.workspace = true
rsp-mpt.workspace = true
sp1-cc-client-executor.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
