[package]
name = "agglayer-prover"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
buildstructor.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
toml.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing.workspace = true
tower = { workspace = true, features = ["timeout"] }
tonic = { workspace = true, features = ["zstd"] }
tonic-health = "0.12.3"
tonic-reflection = "0.12.3"

agglayer-prover-config.workspace = true
agglayer-prover-types.workspace = true
agglayer-telemetry.workspace = true
prover-engine.workspace = true
prover-executor.workspace = true
prover-logger.workspace = true

sp1-sdk = { workspace = true, features = ["native-gnark"] }
sp1-prover = { workspace = true, features = ["native-gnark"] }

[features]
default = []
testutils = []
gpu = ["sp1-sdk/cuda"]
